syntax = "proto3";

package subscriptionpb;

import "google/protobuf/timestamp.proto";
import "subscriptionpb/message.proto";

service SubscriptionService {
  rpc CreateUserSubscription(CreateUserSubscriptionRequest) returns (CreateUserSubscriptionResponse) {}
  rpc FindUserSubscription(FindUserSubscriptionRequest) returns (FindUserSubscriptionResponse) {}
  rpc UpdateUserSubscription(UpdateUserSubscriptionRequest) returns (UpdateUserSubscriptionResponse) {}
  rpc CanPerformAction(CanPerformActionRequest) returns (CanPerformActionResponse) {}
}

// CREATE USER SUBSCRIPTION

message CreateUserSubscriptionRequest {
  string userId = 1;
}

message CreateUserSubscriptionResponse {
  string id = 1;
}


// GET USER SUBSCRIPTION

message FindUserSubscriptionRequest {
  string userId = 1;
}

message FindUserSubscriptionResponse {
  SubscriptionPlan plan = 1;
}

// UPDATE USER SUBSCRIPTION

message UpdateUserSubscriptionRequest {
  string userId = 1;
  string plan = 2;
  string paymentId = 3;
}

message UpdateUserSubscriptionResponse {
  string id = 1;
}

// CAN PERFORM ACTION

message CanPerformActionRequest {
  string userId = 1;
  string action = 2;
  int32 totalPerformedToday = 3;
}

message CanPerformActionResponse {
  bool can = 1;
}